# LangChain_AIAgent

./: .gitignore  ai_agent.py  code_editor.py  lesson_generation.py  main.py  my_youtubbe_search_tool.py  ollama_llm.py  pyproject.toml  result_2025-12-09 23:06:19.649472.json  youtube_searcher.py
agent_files/file_@_2025-12-26 12:53:55.371368/: conversation_memory.json  index.html  script.js  style.css
agent_files/file_@_2025-12-26 13:30:48.853776/: conversation_memory.json
ai_assistant_frontend/: index.html  package-lock.json  package.json
ai_assistant_frontend/src/: App.css  App.jsx
code_editor_agent/: index.js  number_parity_checker.py  signup.html
code_editor_agent/langing_page/: index.html  script.js  style.css
code_editor_agent/server/: server.txt
code_editor_agent/src/: app.py
disc_cache_files/: cache.db
results/: graphql_lesson_20251209_231720.json  graphql_lesson_20251209_232300.json  graphql_lesson_20251209_232300.md
