[project]
name = "langchain-aiagent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langchain>=1.1.3",
    "langchain-google-genai>=4.1.2",
    "langchain-groq>=1.1.0",
    "langchain-tavily>=0.2.13",
    "pydantic[email]>=2.12.5",
    "python-dotenv>=1.2.1",
    "rich>=14.2.0",
]
